--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,7 @@ header .nav-links li:hover {
 h1 {
   text-align: center;
   margin:50px;
+  font-family:'Russo One', sans-serif;
 }
 
 .form-group {
@@ -211,13 +212,13 @@ h1 {
 }
 
 /* Estilos del home */
-.sugerencias {
+.conteiners-divs {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.sugerencias > div {
+.conteiners-divs > div {
   border-radius: 20px;
   color: white;
   background-color: rgb(38, 108, 170);
@@ -230,13 +231,20 @@ h1 {
   
 }
 
-.sugerencias > div h1 {
+#crear-sala:hover ,#unirse:hover {
+  background-color: white;
+  color: rgb(38, 108, 170);
+  border: solid 2px rgb(38, 108, 170);
+  cursor: pointer;
+}
+
+.conteiners-divs > div h1 {
   margin-top: 0;
   font-family:'Russo One', sans-serif;
   font-size: 50px;
 }
 
-.sugerencias > div p {
+.conteiners-divs > div p {
   margin-bottom: 0;
   font-size: 25px;
 }
